--- a/app/src/styles/styles.css
+++ b/app/src/styles/styles.css
@@ -8,14 +8,15 @@
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 600;
-    height: 48px;
+    height: 40px;
     line-height: 48px;
-    padding: 0 24px;
-    border-radius: 4px;
+    padding: 0 20px;
+    border-radius: 10px;
+    transition-duration: 200ms;
 }
 
 .wallet-adapter-button-trigger {
-    background-color: #512da8;
+    background-color: hsl(267, 100%, 35%);
 }
 
 .wallet-adapter-button:not([disabled]):focus-visible {
@@ -23,7 +24,7 @@
 }
 
 .wallet-adapter-button:not([disabled]):hover {
-    background-color: #1a1f2e;
+    background-color: hsl(258, 61%, 52%);
 }
 
 .wallet-adapter-button[disabled] {
@@ -71,7 +72,7 @@
     right: 0;
     margin: 0;
     list-style: none;
-    background: #2c2d30;
+    background: #222222;
     border-radius: 10px;
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
     opacity: 0;
@@ -98,15 +99,20 @@
     box-sizing: border-box;
     padding: 0 20px;
     width: 100%;
-    border-radius: 6px;
+    border-radius: 9px;
     font-size: 14px;
     font-weight: 600;
-    height: 37px;
+    height: 36px;
     color: #fff;
+    transition-duration: 200ms;
 }
 
 .wallet-adapter-dropdown-list-item:not([disabled]):hover {
-    background-color: #1a1f2e;
+    background-color: #444444;
+}
+
+.wallet-adapter-dropdown-list-item:not([disabled]):active {
+    background-color: #333333;
 }
 
 .wallet-adapter-modal-collapse-button svg {
